<resources>
    <string name="app_name">Nestcalc</string>
    <string name="app_version">nestcalc v1.0.16</string>
    <string name="dev_email">mymorce@gmail.com</string>
    <string name="app_feedback">Nestcalc Feedback</string>
    <string name="app_play_store_link">https://play.google.com/store/apps/details?id=nestcalc.mymorce.com</string>

    <!--ADS-->
    <string name="adAppID">ca-app-pub-3883760030326151~1235116669</string>
    <string name="adBanner">ca-app-pub-3883760030326151/7696916373</string>
    <string name="adBannerTest">ca-app-pub-3940256099942544/6300978111</string>

    <!--Toolbar Menu Items-->
    <string name="menu_settings">Settings</string>
    <string name="menu_show_favorites">Show Favorites</string>
    <string name="menu_show_all_history">Show All</string>
    <string name="menu_erase_history">Clear</string>

    <!--Settings-->
    <string name="settings_general">General</string>
    <string name="settings_display">Display</string>
    <string name="settings_ok">OK</string>

    <!--Options MR-->

    <!--MR Action-->
    <string name="settings_mr_button_action_title">Memory Button Action</string>
    <string name="settings_mr_button_action_dialog_title">Choose Action</string>
    <string name="settings_mr_button_action_option_copy_expression">Copy Expression</string>
    <string name="settings_mr_button_action_option_copy_result">Copy Result</string>
    <!--History Size-->
    <string name="settings_history_size_title">History Size</string>
    <string name="settings_history_size_dialog_title">Choose History Size</string>
    <!--Save Expression When Rotate-->
    <string name="settings_save_expression_when_rotate_title">Save Expression when Rotate</string>
    <!--Random Format-->
    <string name="settings_random_format_title">Random Format</string>
    <string name="settings_random_format_dialog_title">Choose Random Format</string>
    <!--History Size-->
    <string name="settings_date_in_history_items_title">Show date in History</string>
    <!--Date Format-->
    <string name="settings_date_format_title">Date Format</string>
    <string name="settings_date_format_dialog_title">Choose Date Format</string>
    <!--Decimal Separator-->
    <string name="settings_decimal_separator_title">Decimal Separator</string>
    <string name="settings_decimal_separator_dialog_title">Choose Decimal Separator</string>
    <!--Group Separator-->
    <string name="settings_group_separator_title">Group Separator</string>
    <string name="settings_group_separator_dialog_title">Choose Group Separator</string>
    <!--Settings About-->
    <string name="settings_about_title">About</string>
    <!--Settings Save To Devs-->
    <string name="settings_email_to_devs_title">Send an Email to Developers</string>
    <!--Rate an App-->
    <string name="settings_rate_an_app_title">Rate an App</string>
    <!--Set To Defaults-->
    <string name="settings_set_to_defaults_title">Reset</string>
    <string name="settings_set_to_defaults_message">Are you sure?</string>
    <string name="settings_set_to_defaults_reset">Reset</string>

    <!--Menu Bottom Sheets-->
    <string name="bottom_sheet_share">Share</string>
    <string name="bottom_sheet_delete">Delete</string>
    <string name="bottom_sheet_paste_from_clipboard">Paste from Clipboard</string>
    <string name="bottom_sheet_copy_results_to_clipboard">Copy result to clipboard</string>
    <string name="bottom_sheet_copy_expression_to_clipboard">Copy expression to clipboard</string>
    <string name="bottom_sheet_use_record">Use Record</string>


    <!--Layouts-->
    <string name="no_records">No records</string>
    <string name="toolbar_history_title">History</string>
    <string name="settings_settings_title">Settings</string>


    <!--Bottom Sheets Dialogs-->
    <string name="dilog_ok">OK</string>
    <string name="dilog_cancel">Cancel</string>

    <string name="erase_history_title">Clear History</string>
    <string name="erase_history_message">Do you really want to clear history?</string>
    <string name="erase_all">Clear All</string>
    <string name="erase">Clear</string>

    <!--Rate app dialog-->
    <string name="rate_an_app_title">Rate An App!</string>
    <string name="rate_an_app_message">If you enjoy Nestcalc, can you rate an app please before exit?</string>
    <string name="rate_an_app_negative">No, Thanks</string>
    <string name="rate_an_app_later">Remind Me Later</string>
</resources>
