<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/settings_mr_button_ok_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:text="@string/settings_ok"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_mr_radio_group_id" />

    <RadioGroup
        android:id="@+id/settings_mr_radio_group_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <RadioButton
            android:id="@+id/settings_mr_radio_group_option_0_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_mr_button_action_option_copy_expression"
            android:textSize="16sp"
            android:theme="@style/AppTheme" />

        <RadioButton
            android:id="@+id/settings_mr_radio_group_option_1_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_mr_button_action_option_copy_result"
            android:textSize="16sp"
            android:theme="@style/AppTheme" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_mr_button_action_dialog_title"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>