<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/record_bottom_sheet_take_id"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_add_circle_outline_grey600_48dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/bottom_sheet_use_record"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/record_bottom_sheet_copy_result_id"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_content_copy_grey600_48dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/bottom_sheet_copy_results_to_clipboard"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/record_bottom_sheet_copy_expression_id"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_content_copy_grey600_48dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/bottom_sheet_copy_expression_to_clipboard"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/record_bottom_sheet_share_id"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_share_grey600_48dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/bottom_sheet_share"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/record_bottom_sheet_remove_id"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_delete_grey600_48dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/bottom_sheet_delete"/>
    </LinearLayout>
</LinearLayout>